# sphinx-versioned-docs

./: .gitignore  .readthedocs.yaml  CHANGELOG.rst  LICENSE  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI-themes.yml  ci-themes.yml  main.yml  python-publish.yml  static.yml
docs/: .readthedocs.yaml  api.rst  changelog.rst  conf.py  contributing.rst  index.rst  install.rst  settings.rst  themes.rst  tutorial.rst
docs/changes/: 1.bugfix.rst  10.feature.rst  11.bugfix.rst  12.feature.rst  13.trivial.rst  15.breaking.rst  16.docs.rst  19.trivial.rst  2.trivial.rst  21.breaking.rst  22.feature.rst  25.bugfix.rst  27.bugfix.rst  33.feature.rst  34.feature.rst  37.bugfix.rst  39.doc.rst  39.removal.rst  4.trivial.rst  45.feature.rst  46.doc.rst  47.deprecation.rst  47.feature.rst  48.bugfix.rst  48.feature.rst  5.breaking.rst  53.doc.rst  55.bugfix.rst  6.breaking.rst  6.docs.rst  60.bugfix.rst  62.bugfix.rst  67.removal.rst  69.feature.rst  76.feature.rst  78.breaking.rst  78.feature.rst  80.feature.rst  README.rst
sphinx_versioned/: __init__.py  __main__.py  build.py  lib.py  sphinx_.py  test.py  versions.py
sphinx_versioned/_static/: _rst_properties.css  _rtd_versions.js  badge_only.css
sphinx_versioned/_templates/: versions.html
sphinxcontrib/: __init__.py
sphinxcontrib/versioning/: __init__.py  __main__.py  git.py  lib.py  main.py  nail.py  nailsphinx_.py  oldmain.py  routines.py  setup_logging.py  sphinx_.py  test.py  versions.py
tests/: cleanup.py  prepare_demo_git.py  prepare_multicommit_repo.py  prepare_tox_build_docs.py  test_branch_selection.py  test_floating_badge.py  test_injection.py  test_multicommit_injection.py
