[metadata]
name = sphinx-versioned-docs
author = devanshshukla99
author_email = devanshshukla99@outlook.com
url = https://github.com/devanshshukla99/sphinx-versioned-docs
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Documentation :: Sphinx
    Topic :: Software Development :: Documentation
license = MIT
description = Sphinx extension to build versionsed docs.
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires =
    setuptools_scm
install_requires =
    GitPython>=3.1.31
    loguru>=0.7.0
    setuptools>=66.0.0
    sphinx>=4.6.0
    typer>=0.9.0


[options.packages.find]
exclude =
    tests

[options.extras_require]
docs =
    sphinx-automodapi>=0.13
    sphinx_rtd_theme

[options.entry_points]
console_scripts =
    versioned = sphinx_versioned.__main__:app

[flake8]
max-line-length = 110

[tool:pytest]
norecursedirs = ".tox" "*.egg-info"
minversion = 4.6
testpaths = tests

[coverage:run]
disable_warnings = no-data-collected
omit =
    */__init__*
    */_version.py
    tests/*
    */conftest.py
    *setup*
